--- a/vercel.json
+++ b/vercel.json
@@ -25,7 +25,7 @@
       "dest": "/api/check-slug.js"
     },
     {
-      "src": "/([a-zA-Z0-9-]+)",
+      "src": "/(?<slug>[a-zA-Z0-9-]+)",
       "dest": "/api/[slug].js"
     },
     {
@@ -33,8 +33,12 @@
       "dest": "/public/index.html"
     },
     {
-      "src": "/write",
+      "src": "/write", 
       "dest": "/public/write.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/index.html"
     }
   ]
 }
